tags/0.1/src/objects/Employer__c.object
<CustomObject>
    <description>Store the employers of every user.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Employer</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>